# asma

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml  rustfmt.toml
crates/adapter/repositories/mongodb/: Cargo.toml
crates/adapter/repositories/mongodb/src/: config.rs  lib.rs  repo.rs
crates/adapter/repositories/postgres/: Cargo.toml  sqlx-data.json
crates/adapter/repositories/postgres/migrations/: 20221014214107_create_users_table.down.sql  20221015000639_create_accounts_table.down.sql  20221015000639_create_accounts_table.up.sql  20221015001330_create_roles_table.down.sql  20221016204316_create_sessions_table.down.sql  20221110023431_create_permissions_table.down.sql  20221110023431_create_permissions_table.up.sql  20221113233712_create_channels_table.down.sql  20221113233712_create_channels_table.up.sql  20221208165959_create_peers_table.down.sql  20221208165959_create_peers_table.up.sql  20221208170142_create_instances_table.down.sql  20221208170142_create_instances_table.up.sql  20230117182133_create_bots_table.down.sql  20230117182133_create_bots_table.up.sql  20230119200940_create_menus_table.down.sql  20230119200940_create_menus_table.up.sql
crates/adapter/repositories/postgres/proc_macros/: Cargo.toml
crates/adapter/repositories/postgres/src/: config.rs  database.rs  lib.rs
crates/adapter/repositories_sqlx/: .env  Cargo.toml
crates/adapter/repositories_sqlx/migrations/: 20221014214107_create_users_table.up.sql  20221015000639_create_accounts_table.up.sql  20221015001330_create_roles_table.up.sql  20221015001626_create_account_roles_table.down.sql  20221015001626_create_account_roles_table.up.sql  20221016204316_create_sessions_table.up.sql  20221110023431_create_permissions_table.up.sql  20221113233712_create_channels_table.down.sql  20221113233712_create_channels_table.up.sql  20221208170142_create_instances_table.down.sql  20221208170142_create_instances_table.up.sql
crates/adapter/repositories_sqlx/src/: accounts.rs  config.rs  database.rs  lib.rs  repo.rs  roles.rs  sessions.rs  users.rs  util.rs
crates/adapter/repositories_sqlx/src/auth/: accounts.rs  mod.rs  roles.rs  sessions.rs  users.rs
crates/adapter/repositories_sqlx/src/link/: channels.rs  instances.rs  mod.rs  peers.rs
crates/adapter/repositories_sqlx/src/models/: macros.rs  mod.rs
crates/adapter/repositories_sqlx/src/util/: macros.rs
crates/adapter/services/: Cargo.toml
crates/adapter/services/src/: config.rs  entropy.rs  lib.rs
crates/adapter/services/src/crypto/: hash.rs
crates/adapter/services/src/link/: mod.rs
crates/app/services/: Cargo.toml
crates/app/services/src/: auth.rs  lib.rs  setup.rs
crates/app/services/src/auth/: config.rs  mod.rs
crates/app/services/src/link/: channels.rs  mod.rs
crates/common/validation/: Cargo.toml
crates/common/validation/src/: constants.rs  custom.rs  helpers.rs  lib.rs  parse.rs  patterns.rs  validators.rs
crates/domain/entities/: Cargo.toml
crates/domain/entities/src/: entity.rs  lib.rs  user.rs
crates/driver/repositories_sqlx/: Cargo.toml
crates/driver/repositories_sqlx/migrations/: 20221014214107_create_users_table.up.sql  20221015000639_create_accounts_table.up.sql  20221015001330_create_roles_table.up.sql  20221015001626_create_account_roles_table.down.sql  20221015001626_create_account_roles_table.up.sql  20221016204316_create_sessions_table.up.sql
crates/driver/repositories_sqlx/src/: accounts.rs  config.rs  database.rs  lib.rs  repo.rs  roles.rs  sessions.rs  users.rs
crates/driver/services/: Cargo.toml
crates/driver/services/src/: config.rs
crates/driver/web_common/: Cargo.toml
crates/driver/web_common/src/: lib.rs  state.rs
crates/driver/web_common/src/auth/: config.rs  mod.rs  token.rs  validator.rs
crates/driver/web_common/src/di/: adapter_services.rs  app_services.rs  base_services.rs  mod.rs  repos.rs  root.rs  services.rs  util.rs
crates/driver/web_common/src/value_types/: mod.rs  pagination.rs
crates/driver/web_grpc/: Cargo.toml  build.rs
crates/driver/web_grpc/proto/models/: chat.proto  instance.proto  message.proto  user.proto
crates/driver/web_grpc/proto/services/: chats.proto  stats.proto
crates/driver/web_grpc/proto/value_types/: pagination.proto
crates/driver/web_grpc/src/: app.rs  lib.rs  proto.rs
crates/driver/web_grpc/src/services/: chats.rs  mod.rs  stats.rs
crates/driver/web_grpc/src/util/: convert.rs  error.rs  mod.rs
crates/driver/web_rest/: Cargo.toml
crates/driver/web_rest/src/: app.rs  config.rs  doc.rs  error.rs  lib.rs
crates/driver/web_rest/src/api/: diag.rs  mod.rs  setup.rs
crates/driver/web_rest/src/extractors/: claims.rs  config.rs  di.rs  mod.rs  pagination.rs  validated_json.rs  validated_query.rs
crates/driver/web_rest/src/util/: claims.rs  claims_macros.rs  jwt.rs  mod.rs  response.rs
crates/driver/web_runner/: Cargo.toml
crates/driver/web_runner/src/: config.rs  di.rs  launch.rs  main.rs
crates/driver/web_runner/src/config/: log.rs  mod.rs  web.rs
crates/host/rest_axum/: Cargo.toml
crates/host/rest_axum/src/: router.rs
crates/host/web/: Cargo.toml
crates/host/web/src/: main.rs
crates/kernel/entities/: Cargo.toml
crates/kernel/entities/src/: account.rs  lib.rs  macros.rs  user.rs
crates/kernel/entities/src/entities/: account.rs  account_role.rs  mod.rs  oauth2_login.rs  role.rs  session.rs  user.rs
crates/kernel/entities/src/traits/: entity.rs
crates/kernel/entities/src/util/: mod.rs  resource_entity.rs  resource_mapping.rs
crates/kernel/proc_macros/: Cargo.toml
crates/kernel/proc_macros/src/: entity.rs  lib.rs  service.rs
crates/kernel/repositories/: Cargo.toml
crates/kernel/repositories/src/: accounts.rs  database_connection.rs  di.rs  error.rs  lib.rs  repo.rs  roles.rs  sessions.rs  users.rs
crates/kernel/repositories/src/auth/: accounts.rs  mod.rs  roles.rs  sessions.rs  users.rs
crates/kernel/services/: Cargo.toml
crates/kernel/services/src/: auth.rs  config.rs  di.rs  entropy.rs  error.rs  lib.rs  setup.rs
crates/web/runner/: Cargo.toml
crates/web/runner/src/: main.rs
doc/: asma.toml  (+2 more)
(+203 files in other folders)
