[workspace]
members = [
  "crates/common/*",
  "crates/kernel/*",
  "crates/driver/*",
  "crates/web/*",
]

[workspace.package]
edition = "2021"
version = "0.0.1"
authors = ["Ayman Al-Qadhi <alqd@protonmail.com>"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0"
chrono = "0"
derive_more = "0"
sqlx = { version = "0", features = [
  "chrono",
  "macros",
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

# sqlx-optimization
[profile.dev.package.sqlx-macros]
opt-level = 3
