[workspace]
members = [
  "crates/common/*",
  "crates/kernel/*",
  "crates/adapter/*",
  "crates/driver/*",
]

[workspace.package]
edition = "2021"
version = "0.0.1"
authors = ["Ayman Al-Qadhi <alqd@protonmail.com>"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0"
chrono = "0"
derive_more = "0"
erased-serde = "0"
lazy_static = "1"
regex = "1"
sqlx = { version = "0", features = [
  "chrono",
  "macros",
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shaku = "0"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0"
uuid = { version = "1", features = ["v4"] }
validator = { version = "0", features = ["derive"] }

# build config
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

# sqlx-optimization
[profile.dev.package.sqlx-macros]
opt-level = 3
