[package]
name = "adapter_repositories_sqlx"
description = "Repositories implementation using SQLx"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
# project dependencies
common_validation = { path = "../../common/validation" }
kernel_entities = { path = "../../kernel/entities" }
kernel_repositories = { path = "../../kernel/repositories" }

# workspace dependencies
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
shaku = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
