[package]
name = "adapter_services"
description = "Implementation of services that require external apis"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
# crate dependencies
config = "0"
directories = "4"
toml = "0"
argon2 = "0"

# project dependencies
kernel_services = { path = "../../kernel/services" }
kernel_proc_macros = { path = "../../kernel/proc_macros" }

# workspace dependencies
anyhow = { workspace = true }
async-trait = { workspace = true }
derive_more = { workspace = true }
erased-serde = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
