[package]
name = "app_services"
description = "Main application services implementations"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
# crate dependencies
async-stream = "0"
futures = "0"

# project dependencies
common_validation = { path = "../../common/validation" }
common_macros = { path = "../../common/macros" }
kernel_entities = { path = "../../kernel/entities" }
kernel_repositories = { path = "../../kernel/repositories" }
kernel_services = { path = "../../kernel/services" }

# workspace dependencies
async-trait = { workspace = true}
derive_more = { workspace = true}
chrono = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true }
