[package]
name = "app_services"
description = "Main application services implementations"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
# crate dependencies
async-stream = "0"
derive-new = "0"
futures = "0"
teloxide = { version = "0.11", features = ["macros"] }

# project dependencies
common_async_utils = { path = "../../common/async_utils" }
common_macros = { path = "../../common/macros" }
kernel_entities = { path = "../../kernel/entities" }
kernel_repositories = { path = "../../kernel/repositories" }
kernel_services = { path = "../../kernel/services" }

# workspace dependencies
anyhow = { workspace = true}
async-trait = { workspace = true}
derive_more = { workspace = true}
chrono = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true }
