[package]
name = "common_validation"
description = "Common validation code"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
# crate dependencies
validators = "0"

# workspace dependencies
lazy_static = { workspace = true }
regex = { workspace = true }
validator = { workspace = true }
