[package]
name = "data_entities"
description = "A crate to hold entites used in data-oriented operations"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
# workspace dependencies
uuid = { workspace = true }
chrono = { workspace = true }

# crate dependencies
validator = { version = "^0", features = ["derive"] }
