[package]
name = "driver_repositories_sqlx"
description = "Repositories implementation using SQLx"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
# project dependencies
kernel_entities = { path = "../../kernel/entities" }
kernel_repositories = { path = "../../kernel/repositories" }

# workspace dependencies
anyhow = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

# sqlx-optimization
[profile.dev.package.sqlx-macros]
opt-level = 3
