[package]
name = "driver_services"
description = "Implementation of services that require external apis"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
# crate dependencies
config = "0"
directories = "4"

# project dependencies
kernel_services = { path = "../../kernel/services" }

# workspace dependencies
anyhow = { workspace = true }
serde = { workspace = true }
