[package]
name = "driver_services"
description = "Implementation of services that require external apis"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
# crate dependencies
config = "0"
directories = "4"

# project dependencies
kernel_services = { path = "../../kernel/services" }
kernel_proc_macros = { path = "../../kernel/proc_macros" }

# workspace dependencies
anyhow = { workspace = true }
serde = { workspace = true }
validator = { workspace = true }
