[package]
name = "driver_web_common"
description = "Common code used in web drivers"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
# project dependencies
app_services = { path = "../../app/services" }
kernel_repositories = { path = "../../kernel/repositories" }
kernel_services = { path = "../../kernel/services" }
adapter_repositories_postgres = { path = "../../adapter/repositories/postgres" }
adapter_services = { path = "../../adapter/services" }

# workspace dependencies
anyhow = { workspace = true }
tracing = { workspace = true }
