[package]
name = "driver_web_common"
description = "Common code used in web drivers"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
# crate dependencies
jsonwebtoken = "8"

# project dependencies
common_macros = { path = "../../common/macros" }
common_validation = { path = "../../common/validation" }
app_services = { path = "../../app/services" }
kernel_entities = { path = "../../kernel/entities" }
kernel_repositories = { path = "../../kernel/repositories" }
kernel_services = { path = "../../kernel/services" }
adapter_repositories_postgres = { path = "../../adapter/repositories/postgres" }
adapter_repositories_mongodb = { path = "../../adapter/repositories/mongodb" }
adapter_services = { path = "../../adapter/services" }

# workspace dependencies
anyhow = { workspace = true }
chrono = { workspace = true }
itertools = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true }
