[package]
name = "driver_web_grpc"
description = "HTTP/2.0 gRPC host using tokio/tonic"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
# create dependencies
prost = "0"
prost-types = "0"
tonic = { version = "0", features = [
  "transport",
  "channel",
  "codegen",
  "prost",
] }

# workspace dependencies
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }

[build-dependencies]
tonic-build = { version = "0", features = ["prost-build"] }
anyhow = { workspace = true }
