[package]
name = "driver_web_rest"
description = "HTTP RESTful API host using tokio/axum"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
# crate dependencies
axum = { version = "0", features = [ "macros" ] }
shaku_axum = "0"
utoipa = { version = "2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "2", features = ["axum"] }

# project dependencies
common_validation = { path = "../../common/validation" }
kernel_repositories = { path = "../../kernel/repositories" }
kernel_services = { path = "../../kernel/services" }
driver_web_common = { path = "../../driver/web_common" }

# workspace dependencies
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true }
