[package]
name = "driver_web_rest"
description = "HTTP RESTful API host using tokio/axum"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
# crate dependencies
aide = { version = "0", features = [
  "axum",
  "axum-extra",
  "http",
  "macros",
  "redoc",
] }
axum = { version = "0", features = ["macros", "headers"] }
cached = "0"
mapper = { git = "https://github.com/kumarmo2/mapper.git", branch = "v0.1" }
schemars = { version = "0", features = ["chrono", "uuid"] }

# project dependencies
common_macros = { path = "../../common/macros" }
common_validation = { path = "../../common/validation" }
kernel_entities = { path = "../../kernel/entities" }
kernel_repositories = { path = "../../kernel/repositories" }
kernel_services = { path = "../../kernel/services" }
driver_web_common = { path = "../../driver/web_common" }

# workspace dependencies
anyhow = { workspace = true }
async-trait = { workspace = true }
bson = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true }
itertools = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
