[package]
name = "driver_web_runner"
description = "HTTP server runner to run a hybrid RESTful/gRPC setup"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
# crate dependencies
axum = "0"
axum_tonic = "0"
serde-enum-str = "0"
tower-http = { version = "0", features = [ "trace" ] }
tracing-subscriber = { version = "0", features = ["env-filter", "json"] }

# project dependencies
common_validation = { path = "../../common/validation" }
common_macros = { path = "../../common/macros" }
driver_web_common = { path = "../web_common" }
driver_web_rest = { path = "../web_rest" }
driver_web_grpc = { path = "../web_grpc" }
kernel_services = { path = "../../kernel/services" }

# workspace dependencies
anyhow = { workspace = true }
erased-serde = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true }
