[package]
name = "driver_web_runner"
description = "HTTP server runner to run a hybrid RESTful/gRPC setup"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
# crate dependencies
async-stream = "0"
axum = "0"
http = "0"
serde-enum-str = "0"
tonic = { version = "0", features = ["transport"] }
tower-http = { version = "0", features = ["cors", "trace"] }
tracing-subscriber = { version = "0", features = ["env-filter", "json"] }

# project dependencies
common_validation = { path = "../../common/validation" }
common_macros = { path = "../../common/macros" }
kernel_services = { path = "../../kernel/services" }
driver_web_common = { path = "../web_common" }
driver_web_rest = { path = "../web_rest" }
driver_web_grpc = { path = "../web_grpc" }

# workspace dependencies
anyhow = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true }
