[package]
name = "host_rest_axum"
description = "HTTP RESTful API host using tokio/axum"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
# crate dependencies
axum = "0"

# workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
