[package]
name = "kernel_entities"
description = "A crate to hold entites used in data-oriented operations"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
# crate dependencies
enumflags2 = "0"

# project dependencies
kernel_proc_macros = { path = "../proc_macros" }

# workspace dependencies
chrono = { workspace = true }
derive_more = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
validator = { workspace = true }
