[package]
name = "kernel_entities"
description = "A crate to hold entites used in data-oriented operations"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
# crate dependencies
enum-repr = "0"
schemars = { version = "0", features = ["chrono", "uuid1"] }

# project dependencies
kernel_proc_macros = { path = "../proc_macros" }

# workspace dependencies
bson = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true }
serde = { workspace = true }
serde_repr = { workspace = true }
uuid = { workspace = true }
