[package]
name = "kernel_repositories"
description = "A crate to hold data repositories traits and generic code"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
# project dependencies
kernel_entities = { path = "../entities" }

# workspace dependencies
async-trait = { workspace = true }
