[package]
name = "kernel_repositories"
description = "A crate to hold data repositories traits and generic code"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
# crate dependencies
futures = "0"

# project dependencies
kernel_entities = { path = "../entities" }

# workspace dependencies
async-trait = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
