[package]
name = "kernel_services"
description = "A crate to hold services' traits and abstract code"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
# project dependencies
kernel_entities = { path = "../entities" }

# workspace dependencies
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true }
erased-serde = { workspace = true }
serde = { workspace = true }
shaku = { workspace = true }
thiserror = { workspace = true }
validator = { workspace = true }
