[package]
name = "kernel_services"
description = "A crate to hold services' traits and abstract code"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
# crate dependencies
enumflags2 = "0"
convert_case = "0"

# project dependencies
kernel_entities = { path = "../entities" }
kernel_repositories = { path = "../repositories" }

# workspace dependencies
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true }
erased-serde = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
validator = { workspace = true }
