[package]
name = "web_runner"
description = "HTTP server runner to run a hybrid RESTful/gRPC setup"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
# crate dependencies
axum = "0"
axum_tonic = "0"

# project dependencies
web_rest = { path = "../rest" }
web_grpc = { path = "../grpc" }

# workspace dependencies
tokio = { workspace = true }
