[package]
name = "web_runner"
description = "HTTP server runner to run a hybrid RESTful/gRPC setup"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
# crate dependencies
axum = "0"
axum_tonic = "0"

# project dependencies
web_rest = { path = "../rest" }
web_grpc = { path = "../grpc" }

kernel_services = { path = "../../kernel/services" }
driver_services = { path = "../../driver/services" }

kernel_repositories = { path = "../../kernel/repositories" }
driver_repositories_sqlx = { path = "../../driver/repositories_sqlx" }

# workspace dependencies
tokio = { workspace = true }
