[package]
name = "adapter_repositories_mongodb"
description = "MongoDB-specific repositories implementation"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
# crate dependencies
mongodb = { version = "2", features = [
  "bson-uuid-0_8",
  "bson-chrono-0_4",
] }

# project dependencies
common_validation = { path = "../../../common/validation" }
kernel_entities = { path = "../../../kernel/entities" }
# workspace dependencies
async-trait = { workspace = true }
serde = { workspace = true }
validator = { workspace = true }
