[package]
name = "adapter_repositories_mongodb"
description = "MongoDB-specific repositories implementation"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
# crate dependencies
mongodb = { version = "2", features = [
  "bson-uuid-0_8",
  "bson-chrono-0_4",
  "bson-serde_with",
] }

# project dependencies
common_validation = { path = "../../../common/validation" }
kernel_entities = { path = "../../../kernel/entities" }
kernel_repositories = { path = "../../../kernel/repositories" }

# workspace dependencies
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
