[package]
name = "proc_macros"
description = "A crate to hold macros used by postgres data repositories"
edition.workspace = true
version.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
# crate dependencies
syn = { version = "1" }
quote = "1"
proc-macro2 = "1"
darling = "0"
